Section_9_Networking/nginx-ingress-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-ingress-controller
spec:
  replicas: 1
  selectors:
    matchLabels:
      type: nginx-ingress
  template:
    metadata:
      name: nginx
      labels:
        name: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0 

      args:
        - /nginx-ingress-controller
