Section_9_Networking/nginx-ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: TCP
      name: http
    - port: 443
      targetPort: 443
      nodePort: TCP
      name: https
  selector:
    app.kubernetes.io/name: nginx-ingress
