Section_9_Networking/ingress-definition.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
 bakend:
    serviceName: wear-service
    servicePort: 80
